add breakpoint vars

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,3 +1,8 @@
+$sm-breakpoint: 577px;
+$md-breakpoint: 769px;
+$lg-breakpoint: 993px;
+$xl-breakpoint: 1201px;
+
 $c-gray: #eee;
 
 $dark: #2f3d4d;
