--- a/src/styles/btn.scss
+++ b/src/styles/btn.scss
@@ -1,5 +1,5 @@
 .btn {
-  padding: 14px 55px;
+  padding: 15px 55px;
   border-radius: 10px;
   background-color: $green;
 
@@ -26,10 +26,8 @@
     }
   }
 
-  @media (max-width: 990px) {
-    width: 260px;
-    height: 50px;
+  @media (max-width: $lg-breakpoint) {
+    padding: 15px 45px;
     font-size: 17px;
-    line-height: 34px;
   }
 }
