--- a/src/styles/components/_promo.scss
+++ b/src/styles/components/_promo.scss
@@ -1,4 +1,5 @@
 .promo {
+  padding: 10px;
   min-height: 630px;
   background: linear-gradient(
     180deg,
@@ -7,19 +8,28 @@
   ),
     url("../images/promo/bg-promo.jpg");
   background-size: cover;
-  background-position: center;
+  background-position: 50% 35%;
 
   color: $text-color-light;
+
+  @media (max-width: $md-breakpoint) {
+    min-height: 455px;
+  }
 
   &__container {
     position: relative;
   }
 
   &__top {
+    display: flex;
     align-items: center;
     justify-content: space-between;
 
-    margin-bottom: 100px;
+    margin-bottom: 90px;
+
+    @media (max-width: $md-breakpoint) {
+      margin-bottom: 20px;
+    }
   }
 
   &__logo {
@@ -27,15 +37,24 @@
     justify-content: center;
 
     img {
-      width: 200px;
-      height: 100px;
+      width: 170px;
+      height: 90px;
+
+      @media (max-width: $md-breakpoint) {
+        width: 120px;
+        height: 65px;
+      }
     }
   }
 
   &__privacy {
     text-align: right;
     font-size: 21px;
-    line-height: 32px;
+    line-height: 1.5em;
+
+    @media (max-width: $md-breakpoint) {
+      display: none;
+    }
 
     a {
       color: $text-color-light;
@@ -51,17 +70,29 @@
   &__subtitle {
     font-weight: 900;
     font-size: 24px;
-    line-height: 36px;
+    line-height: 1.5em;
     text-transform: uppercase;
+
+    @media (max-width: $md-breakpoint) {
+      font-size: 18px;
+    }
   }
 
   &__title {
     font-family: "Roboto Condensed", sans-serif;
     font-size: 60px;
-    line-height: 76px;
+    line-height: 1.25em;
     text-align: center;
 
     margin-bottom: 60px;
+
+    @media (max-width: $lg-breakpoint) {
+      margin-bottom: 30px;
+    }
+
+    @media (max-width: $md-breakpoint) {
+      font-size: 36px;
+    }
   }
 
   &__glassdoor {
@@ -73,11 +104,6 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    transition: transform 300ms;
-
-    &:hover {
-      transform: scale(1.07);
-    }
 
     &--big {
       background-image: url("../images/promo/glassdoor-big.svg");
@@ -96,7 +122,7 @@
         align-items: flex-start;
       }
 
-      @media (max-width: 768px) {
+      @media (max-width: $md-breakpoint) {
         display: none;
       }
     }
@@ -104,10 +130,14 @@
     &--small {
       display: none;
       background-image: url("../images/promo/glassdoor-small.svg");
-      bottom: -170px;
+      top: 125%;
       left: calc(50% - 100px);
       width: 200px;
       height: 150px;
+
+      @media (max-width: $md-breakpoint) {
+        display: flex;
+      }
 
       p {
         font-size: 9px;
@@ -118,31 +148,6 @@
       div {
         margin-bottom: 30%;
       }
-
-      @media (max-width: 768px) {
-        display: flex;
-      }
-    }
-  }
-
-  @media (max-width: 768px) {
-    min-height: 455px;
-
-    &__top {
-      margin-bottom: 20px;
-    }
-
-    &__privacy {
-      display: none;
-    }
-
-    &__subtitle {
-      font-size: 18px;
-    }
-
-    &__title {
-      font-size: 38px;
-      line-height: 45px;
     }
   }
 }
