--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -3,6 +3,8 @@ $md-breakpoint: 769px;
 $lg-breakpoint: 993px;
 $xl-breakpoint: 1201px;
 
+$youtube-color: #f00;
+
 $c-gray: #eee;
 
 $dark: #2f3d4d;
