--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -1,4 +1,5 @@
 .footer {
+  padding: 10px 24px;
   background-color: $dark;
   min-height: 230px;
 
@@ -12,7 +13,7 @@
       width: 200px;
       height: 100px;
 
-      @media (max-width: 767px) {
+      @media (max-width: $md-breakpoint) {
         width: 110px;
         height: 60px;
       }
@@ -22,7 +23,7 @@
   &__copyright {
     color: #fff;
 
-    @media (max-width: 767px) {
+    @media (max-width: $md-breakpoint) {
       font-size: 16px;
     }
   }
@@ -36,7 +37,7 @@
       color: #fff;
     }
 
-    @media (max-width: 767px) {
+    @media (max-width: $md-breakpoint) {
       font-size: 16px;
       text-align: left;
     }
@@ -46,20 +47,30 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    fill: white;
   }
 
   &__sociall {
     width: 40px;
     height: 40px;
-    fill: white;
 
-    @media (max-width: 767px) {
-      height: 25px;
+    color: $text-color-light;
+    transition: color 300ms;
+
+    &:hover {
+      color: $green;
+    }
+
+    @media (max-width: $md-breakpoint) {
+      height: 20px;
+      width: 20px;
     }
 
     &--facebook {
       width: 20px;
+
+      @media (max-width: $md-breakpoint) {
+        width: 10px;
+      }
     }
   }
 }
