fixed photos and add animation for value blocks

--- a/src/styles/components/_what-we-value.scss
+++ b/src/styles/components/_what-we-value.scss
@@ -12,6 +12,12 @@
     @include description($text-color-dark);
   }
 
+  &__wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 435px);
+    gap: $grid-gutter-width;
+  }
+
   &__value {
     margin-bottom: 20px;
   }
