--- a/src/styles/components/_value.scss
+++ b/src/styles/components/_value.scss
@@ -1,9 +1,47 @@
 .value {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
-  padding: 30px 10px 0;
+  padding: 30px 0 0;
   background-color: $green;
   border-radius: 20px;
+  cursor: pointer;
+
+  &--customer {
+    background-color: #3d4d5f;
+  }
+
+  &--human {
+    background-color: $green;
+  }
+
+  &--hackers {
+    background-color: #6c7379;
+  }
+
+  &--hungry {
+    background-color: #b63333;
+  }
+
+  &--humble {
+    background-color: #755462;
+  }
+
+  &--curious {
+    background-color: $red-light;
+  }
+
+  &__main {
+    display: flex;
+    justify-content: space-between;
+    opacity: 0;
+
+    transition: opacity 0.3s;
+
+    &--active {
+      opacity: 1;
+    }
+  }
 
   &__title {
     @include font-style-bold(32px, 55px);
@@ -15,7 +53,36 @@
 
   &__image {
     display: block;
+
+    border-radius: 20px;
     height: 265px;
     width: 325px;
+  }
+
+  &__additional {
+    position: absolute;
+    bottom: 0;
+    height: inherit;
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    opacity: 0;
+    color: white;
+    padding: 0 30px 70px;
+
+    transition: opacity 0.3s;
+
+    &--active {
+      opacity: 1;
+    }
+
+    &--title {
+      margin-bottom: 10px;
+      @include font-style-bold(32px, 12px);
+    }
+
+    &--text {
+      @include font-style-normal(24px, 36px);
+    }
   }
 }
