--- a/src/styles/components/_value.scss
+++ b/src/styles/components/_value.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: stretch;
   padding: 30px 0 0;
   background-color: $green;
   border-radius: 20px;
@@ -44,6 +45,7 @@
   }
 
   &__title {
+    margin-right: 40px;
     @include font-style-bold(32px, 55px);
     writing-mode: vertical-lr;
     text-align: right;
@@ -52,23 +54,22 @@
   }
 
   &__image {
-    display: block;
-
-    border-radius: 20px;
-    height: 265px;
-    width: 325px;
+    border-radius: $image-border-radius;
+    object-fit: contain;
+    object-position: bottom right;
+    height: 260px;
+    width: 70%;
   }
 
   &__additional {
     position: absolute;
     bottom: 0;
-    height: inherit;
     display: flex;
     flex-direction: column;
     text-align: left;
     opacity: 0;
     color: white;
-    padding: 0 30px 70px;
+    padding: 0 25px 70px;
 
     transition: opacity 0.3s;
 
