--- a/src/styles/components/_what-we-value.scss
+++ b/src/styles/components/_what-we-value.scss
@@ -17,4 +17,10 @@
     grid-template-columns: repeat(3, auto);
     gap: $grid-gutter-width;
   }
+
+  @media (max-width: $xl-breakpoint) {
+    &__wrapper {
+      grid-template-columns: repeat(2, auto);
+    }
+  }
 }
