--- a/src/styles/components/_value.scss
+++ b/src/styles/components/_value.scss
@@ -85,4 +85,22 @@
       @include font-style-normal(24px, 36px);
     }
   }
+
+  @media (max-width: $xl-breakpoint) {
+    &--hungry {
+      order: 1;
+    }
+
+    &--humble {
+      order: 2;
+    }
+
+    &--hackers {
+      order: 3;
+    }
+
+    &--curious {
+      order: 4;
+    }
+  }
 }
