--- a/src/styles/components/_value.scss
+++ b/src/styles/components/_value.scss
@@ -37,11 +37,11 @@
     display: flex;
     justify-content: space-between;
     opacity: 0;
-    transform: translateY(100%);
-    transition: opacity 0.6s, transform 0.3s;
+    transform: translateX(-100%);
+    transition: opacity 0.7s, transform 0.5s;
 
     &--active {
-      transform: translateY(0);
+      transform: translateX(0);
       opacity: 1;
     }
   }
@@ -71,10 +71,11 @@
     opacity: 0;
     color: white;
     padding: 0 25px 70px;
-
-    transition: opacity 0.3s;
+    transform: translateX(100%);
+    transition: opacity 0.7s, transform 0.5s;
 
     &--active {
+      transform: translateX(0);
       opacity: 1;
     }
 
