clear code in select work

--- a/src/styles/components/_vacancies.scss
+++ b/src/styles/components/_vacancies.scss
@@ -103,6 +103,10 @@
     }
   }
 
+  &__error {
+    text-align: center;
+  }
+
   @media (max-width: 992px) {
     padding: 47px 20px;
   }
@@ -110,8 +114,4 @@
   @media (max-width: 500px) {
     padding: 47px 20px;
   }
-}
-
-.error {
-  text-align: center;
 }
