--- a/src/styles/btn.scss
+++ b/src/styles/btn.scss
@@ -1,10 +1,12 @@
-.btn {
-  padding: 15px 55px;
+.button {
+  padding: 0.75em 2em;
   border-radius: 10px;
   background-color: $green;
 
   color: $text-color-light;
   font-weight: 500;
+
+  transition: background-color 0.3s, color 0.3s;
 
   &:hover {
     background-color: $green-light;
