--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -134,7 +134,7 @@
     width: 100%;
   }
 
-  @media (max-width: 994px) {
+  @media (max-width: $lg-breakpoint) {
     &__controls {
       margin-bottom: 62px;
     }
@@ -158,7 +158,7 @@
     }
   }
 
-  @media (max-width: 680px) {
+  @media (max-width: $sm-breakpoint) {
     &__controls {
       margin-bottom: 42px;
     }
