--- a/src/styles/components/_value.scss
+++ b/src/styles/components/_value.scss
@@ -17,13 +17,13 @@
 
   &__additional {
     position: absolute;
-    bottom: 0;
+    top: 0;
     display: flex;
     flex-direction: column;
     text-align: left;
     opacity: 0;
     color: white;
-    padding: 0 25px 70px;
+    padding: 120px 25px 0;
     transform: translateX(100px);
     visibility: hidden;
     transition: opacity 0.7s, transform 0.5s, visibility 0s linear 700ms;
