--- a/src/styles/components/_what-we-value.scss
+++ b/src/styles/components/_what-we-value.scss
@@ -12,13 +12,7 @@
     @include description($text-color-dark);
   }
 
-  &__wrapper {
-    display: grid;
-    grid-template-columns: repeat(3, 435px);
-    gap: $grid-gutter-width;
-  }
-
   &__value {
-    margin-bottom: 20px;
+    margin-bottom: $grid-gutter-width;
   }
 }
