--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -28,6 +28,10 @@
     }
   }
 
+  &__year {
+    font-size: inherit;
+  }
+
   &__privacy {
     text-align: right;
     font-size: 21px;
@@ -47,6 +51,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    margin-bottom: 15px;
   }
 
   &__sociall {
