--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -23,6 +23,9 @@ $text-color-dark: #3c4447;
 
 $text-color-light: #fff;
 
+$select-border-color: #cbd0d3;
+$location-color: #b4bbbe;
+
 $card-color-crunch: rgba(0, 152, 0, 0.19);
 $card-color-forbes: rgba(60,59,59,0.19);
 $card-color-edsurge: rgba(0, 153, 138, 0.14);
