--- a/src/styles/components/_slogan.scss
+++ b/src/styles/components/_slogan.scss
@@ -44,7 +44,7 @@
     margin: 0 auto;
     max-width: 740px;
 
-    color: white;
+    color: $text-color-light;
   }
 
   &__title {
@@ -61,9 +61,10 @@
 
   &__btn {
     margin-top: 8px;
+    margin-bottom: 28px;
   }
 
-  @media (max-width: 1200px) {
+  @media (max-width: $xl-breakpoint) {
     padding: 0 20px;
     padding-top: 33px;
 
@@ -75,9 +76,13 @@
       margin-bottom: 20px;
       text-align: center;
     }
+
+    &__img {
+      margin-top: 28px;
+    }
   }
 
-  @media (max-width: 500px) {
+  @media (max-width: $sm-breakpoint) {
     &__wrapper {
       min-height: 375px;
     }
@@ -90,10 +95,6 @@
     &__description {
       font-size: 16px;
       line-height: 26px;
-    }
-
-    &__btn {
-      font-size: 20px;
     }
   }
 }
