add response to values

--- a/src/styles/components/_what-we-value.scss
+++ b/src/styles/components/_what-we-value.scss
@@ -15,4 +15,8 @@
   &__value {
     margin-bottom: $grid-gutter-width;
   }
+
+  @media (max-width: $lg-breakpoint) {
+    padding: 50px 20px 0;
+  }
 }
