--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -37,3 +37,10 @@ $image-border-radius: 20px;
 
 $scroll-transform-transition: transform 0.5s cubic-bezier(0.3, 0.1, 0.3, 1);
 $scroll-opacity-transition: opacity 0.7s cubic-bezier(0.3, 0.1, 0.3, 1);
+
+$card-customer-color:#3d4d5f;
+$card-human-color: $green;
+$card-hackers-color: #6c7379;
+$card-hungry-color: #b63333;
+$card-humble-color: #755462;
+$card-curious-color: $red-light;
