--- a/src/styles/components/_select.scss
+++ b/src/styles/components/_select.scss
@@ -24,6 +24,7 @@
   &__basic-option {
     border-radius: 10px;
     border: none;
+    border-bottom: 1px solid transparent;
     padding: 28px 39px;
 
     transition: background-color 0.2s;
@@ -34,7 +35,7 @@
 
     &::after {
       content: url("../images/vacancies/arrow-down.svg");
-      color: #fff;
+      color: $text-color-light;
       line-height: 1;
 
       position: absolute;
