--- a/src/styles/components/_in-news.scss
+++ b/src/styles/components/_in-news.scss
@@ -28,7 +28,7 @@
     }
   }
 
-  @media (max-width: 995px) {
+  @media (max-width: $lg-breakpoint) {
     padding: 24px;
 
     &__title {
@@ -43,7 +43,7 @@
     }
   }
 
-  @media (max-width: 480px) {
+  @media (max-width: $sm-breakpoint) {
     padding: 10px;
 
     &__wrapper {
