--- a/src/styles/components/_value.scss
+++ b/src/styles/components/_value.scss
@@ -14,6 +14,7 @@
   }
 
   &__image {
+    box-sizing: content-box;
     float: right;
     border-radius: $image-border-radius;
     object-fit: contain;
@@ -24,12 +25,6 @@
 
   &--customer {
     background-color: $card-customer-color;
-
-    >.value__main {
-      >.value__image {
-        padding: 20px 5px 0 0;
-      }
-    }
   }
 
   &--human {
@@ -131,7 +126,8 @@
     }
 
     &__image {
-      height: 130px;
+      height: 100%;
+      width: 90%;
     }
   }
 }
