--- a/src/styles/components/_what-we-value.scss
+++ b/src/styles/components/_what-we-value.scss
@@ -18,5 +18,15 @@
 
   @media (max-width: $sm-breakpoint) {
     padding: 30px 10px;
+
+    &__title {
+      font-size: 38px;
+      line-height: 45px;
+    }
+
+    &__desctipiton {
+      font-size: 16px;
+      line-height: 26px;
+    }
   }
 }
