separate boottrap from classes

--- a/src/styles/components/_slogan.scss
+++ b/src/styles/components/_slogan.scss
@@ -52,11 +52,8 @@
   }
 
   &__img {
+    width: 100%;
     align-self: flex-end;
-
-    &--center {
-      align-self: center;
-    }
   }
 
   &__btn {
