--- a/src/styles/btn.scss
+++ b/src/styles/btn.scss
@@ -2,6 +2,7 @@
   padding: 0.75em 2em;
   border-radius: 10px;
   background-color: $green;
+  display: inline-block;
 
   color: $text-color-light;
   font-weight: 500;
