Separate bootstrap from classes (#107)
* z-index on vacancies fix

* separate boottrap from classes

--- a/src/styles/components/_vacancies.scss
+++ b/src/styles/components/_vacancies.scss
@@ -7,13 +7,14 @@
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    position: relative;
     z-index: 1;
   }
 
   &__list {
-    text-align: center;
+    width: 100%;
     margin-top: 63px;
-    position: relative;
+    text-align: center;
   }
 
   &__item {
