--- a/src/styles/components/_value.scss
+++ b/src/styles/components/_value.scss
@@ -128,6 +128,20 @@
     &__image {
       height: 150px;
     }
+
+    &__additional {
+      padding: 50px 15px 0;
+
+      &--title {
+        font-size: 24px;
+        line-height: 15px;
+      }
+
+      &--text {
+        font-size: 15px;
+        line-height: 15px;
+      }
+    }
   }
 
   @media (max-width: $sm-breakpoint) {
@@ -139,6 +153,20 @@
     &__image {
       height: 130px;
       width: 95%;
+    }
+
+    &__additional {
+      padding: 40px 10px 0;
+
+      &--title {
+        font-size: 15px;
+        line-height: 13px;
+      }
+
+      &--text {
+        font-size: 12px;
+        line-height: 10px;
+      }
     }
   }
 }
