add links for news

--- a/src/styles/components/_news.scss
+++ b/src/styles/components/_news.scss
@@ -52,6 +52,14 @@
     }
   }
 
+  &__link {
+    display: block;
+
+    &:hover {
+      color: inherit;
+    }
+  }
+
   &__wrapper {
     height: 100%;
 
