--- a/src/styles/components/_value.scss
+++ b/src/styles/components/_value.scss
@@ -5,6 +5,7 @@
   border-radius: 20px;
   overflow: hidden;
   cursor: pointer;
+  --image-padding: 20px;
 
   &__main {
     position: relative;
@@ -27,7 +28,7 @@
 
     >.value__main {
       >.value__image {
-        padding: 20px 5px 0 0;
+        padding: var(--image-padding) 5px 0 0;
       }
     }
   }
@@ -37,7 +38,7 @@
 
     >.value__main {
       >.value__image {
-        padding-top: 20px;
+        padding-top: var(--image-padding);
       }
     }
   }
@@ -56,12 +57,6 @@
 
   &--curious {
     background-color: $card-curious-color;
-
-    >.value__main {
-      >.value__image {
-        object-fit: cover;
-      }
-    }
   }
 
   &__title {
@@ -153,14 +148,16 @@
   }
 
   @media (max-width: $sm-breakpoint) {
+    --image-padding: 10px;
+
     &__title {
-      font-size: 14px;
-      line-height: 20px;
+      top: 15px;
+      font-size: 15px;
+      line-height: 24px;
     }
 
     &__image {
-      height: 130px;
-      width: 95%;
+      height: 120px;
     }
 
     &__additional {
@@ -173,7 +170,7 @@
 
       &--text {
         font-size: 12px;
-        line-height: 10px;
+        line-height: 12px;
       }
     }
   }
