--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -2,12 +2,20 @@
   font-family: "Roboto Condensed", sans-serif;
   font-weight: 700;
   font-size: 45px;
-  line-height: 68px;
+  line-height: 1.2em;
+
+  @media (max-width: $sm-breakpoint) {
+    font-size: 38px;
+  }
 }
 
 %p {
   font-family: Roboto, serif;
   font-size: 24px;
   font-weight: 400;
-  line-height: 36px;
+  line-height: 1.62em;
+
+  @media (max-width: $sm-breakpoint) {
+    font-size: 16px;
+  }
 }
