--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -35,7 +35,7 @@
   &__privacy {
     text-align: right;
     font-size: 21px;
-    line-height: 32px;
+    line-height: 1.5em;
 
     a {
       color: $text-color-light;
