--- a/src/styles/components/_what-we-value.scss
+++ b/src/styles/components/_what-we-value.scss
@@ -14,19 +14,17 @@
 
   @media (max-width: $lg-breakpoint) {
     padding: 50px 20px;
-  }
-
-  @media (max-width: $sm-breakpoint) {
-    padding: 30px 10px;
 
     &__title {
       font-size: 38px;
-      line-height: 45px;
     }
 
-    &__desctipiton {
+    &__description {
       font-size: 16px;
-      line-height: 26px;
     }
+  }
+
+  @media (max-width: $md-breakpoint) {
+    padding: 30px 10px;
   }
 }
