--- a/src/styles/components/_what-we-value.scss
+++ b/src/styles/components/_what-we-value.scss
@@ -14,6 +14,11 @@
 
   @media (max-width: $lg-breakpoint) {
     padding: 50px 20px;
+
+    &__description {
+      font-size: 16px;
+      line-height: 26px;
+    }
   }
 
   @media (max-width: $sm-breakpoint) {
