fix zise description in what-we-value block (#119)

--- a/src/styles/components/_what-we-value.scss
+++ b/src/styles/components/_what-we-value.scss
@@ -15,12 +15,17 @@
   @media (max-width: $lg-breakpoint) {
     padding: 50px 20px;
 
-    &__title {
-      font-size: 38px;
-    }
-
     &__description {
       font-size: 16px;
+      line-height: 26px;
+    }
+  }
+
+  @media (max-width: $sm-breakpoint) {
+    padding: 30px 10px;
+
+    &__title {
+      font-size: 38px;
     }
   }
 
