--- a/src/styles/components/_select.scss
+++ b/src/styles/components/_select.scss
@@ -25,7 +25,7 @@
     border-radius: 10px;
     border: none;
     border-bottom: 1px solid transparent;
-    padding: 1em;
+    padding: 1em 1.2em;
 
     transition: background-color 0.2s;
 
@@ -88,7 +88,7 @@
   }
 
   &__option {
-    padding: 15px 39px;
+    padding: 0.5em 1.2em;
     transition: transform 0.3s, opacity 0.3s;
     transform: translateY(-100%);
     opacity: 0;
